js262/test/language/expressions/assignmenttargettype/parenthesized-primaryexpression-literal-boolean.js


/*---
description: PrimaryExpression Literal BooleanLiteral; Return invalid. (ParenthesizedExpression)
esid: sec-grouping-operator-static-semantics-assignmenttargettype
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    ParenthesizedExpression: (Expression)

    Return AssignmentTargetType of Expression.
---*/

$DONOTEVALUATE();

(true) = 1;
